# reprod-llm-internals

./: .gitignore  README.md  pyproject.toml  test_embedding_gradient.ipynb  test_multinode.ipynb
model/: test_embedding_gradient.ipynb  test_rope.ipynb  test_rope.py
tokenizer/: Cargo.toml  add_vocabs.ipynb  split_morpheme.py
tokenizer/assets/: aux_tokenizer.json  mecab_ko.txt
tokenizer/src/: main.rs
